--- a/protfolio.css
+++ b/protfolio.css
@@ -388,7 +388,7 @@ button:hover {
         grid-template-columns: 1fr 1fr;
         grid-template-rows: auto;
         gap: 15px;
-        place-items: center;
+        place-items: start;
     }
 
 
@@ -444,9 +444,10 @@ button:hover {
 @media only screen and (max-width:375px) {
 
     .contact {
-        width: auto;
-        min-width: 250px;
-        padding: 3px;
+        /* width: auto; */
+        width: 100%;
+        padding: 5px;
+
     }
 
     .img-a img {
