--- a/protfolio.css
+++ b/protfolio.css
@@ -35,6 +35,12 @@
     object-fit: cover;
 }
 
+.img-a img:hover {
+
+    transform: scale(1.1);
+    transition: 0.6s;
+}
+
 .text-1 {
     margin-top: 50px;
 }
@@ -75,12 +81,28 @@
     object-fit: cover;
 }
 
+.img-b img:hover {
+    transform: scale(1.1);
+    transition: 0.6s;
+}
 
+.button-2 {
+    margin-top: 10px;
+}
+
+.text-2 h1 {
+    padding: 5px;
+
+}
 
 .text-2 p {
     font-size: 20px;
     text-align: center;
-    padding: 2rem;
+    padding: 5px;
+}
+
+.text-2 {
+    padding: 10px;
 }
 
 .button-2 {
@@ -214,17 +236,19 @@ button:hover {
     border-radius: 10px;
     padding: 20px;
     box-shadow: 0px 0px 18px 5px orangered;
+
 }
 
 .contact h1 {
     line-height: 45px;
     text-align: center;
-
+    margin-top: 20px;
 }
 
 .contact p {
     font-size: 20px;
     margin: 8px;
+    margin-top: 30px;
 
 }
 
@@ -491,6 +515,10 @@ button:hover {
         grid-template-columns: 1fr;
         grid-template-rows: auto;
         place-items: center;
+    }
+
+    .text-2 p {
+        padding: 2rem;
     }
 
 
