--- a/protfolio.css
+++ b/protfolio.css
@@ -496,7 +496,6 @@ button:hover {
     }
 
     .contact {
-        /* width: auto; */
         width: 300px;
         padding: 5px;
     }
@@ -518,6 +517,14 @@ button:hover {
         grid-template-columns: 1fr;
         grid-template-rows: auto;
         place-items: center;
+    }
+
+    .card h2 {
+        padding: 5px;
+    }
+
+    .card p {
+        padding: 5px;
     }
 
     .text-2 {
