--- a/protfolio.css
+++ b/protfolio.css
@@ -27,16 +27,12 @@
     transition: 1s;
 }
 
-
-
 .flex-1 {
-
     text-align: center;
     margin: 50px;
 }
 
 .img-a img {
-
     height: 220px;
     width: 220px;
     border-radius: 50%;
@@ -65,22 +61,19 @@
 
 .button-1 {
     background-color: rgb(241, 97, 44);
-    padding: 10px;
+    padding: 12px;
     font-size: 20px;
     border: none;
     border-radius: 10px;
     color: rgb(240, 248, 255);
     cursor: pointer;
-    width: 200px;
+    width: 150px;
 }
-
 
 .about-section {
     text-align: center;
     margin-top: 50px;
 }
-
-
 
 .img-b img {
     width: 200px;
@@ -101,7 +94,7 @@
 
 .text-2 h1 {
     padding: 5px;
-    color: rgb(44, 44, 137);
+
 }
 
 .text-2 p {
@@ -116,7 +109,8 @@
 
 .button-2 {
     background-color: rgb(231, 93, 43);
-    padding: 10px;
+    padding: 12px;
+    width: 220px;
     border: none;
     border-radius: 10px;
     color: rgb(240, 248, 255);
@@ -134,20 +128,17 @@
     align-items: center;
 }
 
-
 .card-section h1 {
     text-align: center;
-
-
 }
 
 .header h1 {
     text-align: center;
+
 }
 
-
 .card-section span {
-    color: rgb(213, 62, 32);
+    color: rgb(255, 85, 0);
 }
 
 .card-flex {
@@ -155,7 +146,6 @@
     grid-template-rows: auto;
     gap: 10px;
     place-items: center;
-
 }
 
 .contact-flex {
@@ -163,7 +153,7 @@
     grid-template-rows: auto;
     gap: 10px;
     place-items: center;
-
+    margin-top: 25px;
 }
 
 .card {
@@ -174,7 +164,7 @@
     width: 400px;
     border-radius: 10px;
     padding: 10px;
-    box-shadow: 0px 0px 10px 5px rgb(255, 106, 0);
+    box-shadow: 0px 0px 7px 3px rgb(114, 80, 16);
 }
 
 .card img {
@@ -192,10 +182,10 @@
 
 .box {
     text-align: center;
-    margin-top: 30px;
+    margin-top: 10px;
     width: 100%;
     min-height: 150px;
-    background-color: rgb(54, 54, 158);
+    background-color: rgb(90, 90, 103);
     padding: 15px;
     border-radius: 10px;
 }
@@ -205,14 +195,15 @@ button:hover {
     transition: 0.5s;
 }
 
-
 .box h1 {
-    color: aliceblue;
+    color: white;
+    font-size: 30px;
 }
 
 .button-3 button {
-    background-color: orangered;
-    padding: 10px;
+    background-color: rgb(178, 75, 37);
+    padding: 12px;
+    width: 130px;
     border: none;
     border-radius: 10px;
     color: aliceblue;
@@ -222,25 +213,27 @@ button:hover {
 }
 
 .contact-div {
+
     padding: 20px;
     margin-top: 20px;
     align-items: center;
+    border: 1px solid rgb(223, 203, 203);
 }
 
 .header h1 {
-    color: rgb(240, 167, 9);
+    color: rgb(255, 123, 0);
+    padding: 10px;
 }
-
 
 .contact {
     align-items: center;
-    margin-top: 20px;
+
     text-align: center;
     width: 400px;
     height: 300px;
     border-radius: 10px;
     padding: 20px;
-    box-shadow: 0px 0px 10px 5px orangered;
+    box-shadow: 0px 0px 7px 3px rgb(114, 80, 16);
 }
 
 .contact:hover {
@@ -249,7 +242,7 @@ button:hover {
 }
 
 .contact h1 {
-    line-height: 45px;
+    /* line-height: 45px; */
     text-align: center;
     margin-top: 20px;
 }
@@ -267,8 +260,6 @@ button:hover {
     place-items: center;
 }
 
-
-
 .footer {
     padding: 20px;
     margin-top: 50px;
@@ -281,8 +272,6 @@ button:hover {
     margin: 10px;
     cursor: pointer;
 }
-
-
 
 .footer-flex {
     display: flex;
@@ -330,7 +319,6 @@ button:hover {
         grid-template-columns: 1fr 1fr;
         place-items: center;
         margin-top: 50px;
-
     }
 
     .card-section h1 {
