--- a/protfolio.css
+++ b/protfolio.css
@@ -187,7 +187,7 @@
     min-height: 150px;
     background-color: rgb(90, 90, 103);
     padding: 15px;
-    border-radius: 10px;
+    border: 1px solid gray;
 }
 
 button:hover {
